@@ -1,5 +1,8 @@
 2021-02-21  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/dependency/Analyzer.java:
+	Refactored to use POM.Dependency for Artifact implementation.
+
 	* src/main/java/galyleo/dependency/POM.java,
 	src/main/java/galyleo/dependency/Resolver.java,
 	src/main/java/galyleo/shell/magic/POM.java:
